# VLM-Grocery-Fine-Tuning

./: .gitignore  README.md  pyproject.toml  tmp.txt
data/: dataset_info.json  eval_dataset_single_image.json  eval_dataset_three_images.json  eval_few_shot_prompt.json  eval_structured.json  freiburg_grocery.json  freiburg_grocery_simple_json_prompt.json  freiburg_grocery_simple_prompt.json  fruits_and_vegs_grocery.json  fruits_and_vegs_grocery_few_shot_json_prompt.json  fruits_and_vegs_grocery_few_shot_prompt.json  fruits_and_vegs_grocery_simple_json_prompt.json  fruits_and_vegs_grocery_simple_prompt.json  zeki_grocery.json  zeki_grocery_few_shot_json_prompt.json  zeki_grocery_few_shot_prompt.json  zeki_grocery_simple_json_prompt.json  zeki_grocery_simple_prompt.json  zeki_grocery_train.json  zeki_grocery_train_few_shot_prompt.json
datasets/: freiburg_groceries.json  freiburg_groceries_dataset_final.json  freiburg_groceries_dataset_info.json  zeki_2_groceries_dataset_info.json  zeki_2_groceries_dataset_info_final.json  zeki_groceries_dataset_info_updated.json  zeki_groceries_dataset_preprocessed.json  zeki_groceries_dataset_raw.json
helpers/: openai_api.py
plots/: attention_plot.py  base_vs_finetuned_plot.py  base_vs_tuned_few_shot_prompt.py  generate_plot.py
scripts/: __init__.py  alpaca_formatter.py  capture_image.py  create_eval_set.py  dataset_predictions.py  evaluate.py  fixed_wrong_parsing.py  generate_dataset_metadata.py  generate_metadata_freiburg_dataset.py  generate_metadata_freiburg_dataset_with_count.py  gradio_chat.py  pipeline_demo.ipynb  (+2 more)
(+133 files in other folders)
