[project]
name = "vlm-grocery-fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anls>=0.0.2",
    "bert-score>=0.3.13",
    "nltk>=3.9.1",
    "sentence-transformers>=4.0.1",
    "tensorflow>=2.19.0",
    "tf-keras>=2.19.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.50.1",
]
