[project]
name = "vlm-grocery-fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.44.1",
    "ipykernel>=6.29.5",
    "liger-kernel>=0.4.2",
    "llamafactory @ git+https://github.com/hiyouga/LLaMA-Factory.git",
    "numpy>=1.26.4",
    "qwen-vl-utils>=0.0.8",
    "setuptools>=75.6.0",
    "torch",
    "torchaudio",
    "torchvision",
    "vllm>=0.4.3,<0.6.4",
    "gdown",
    "openai>=1.57.1",
    "gradio>=5.12.0",
    "deepspeed>=0.16.3",
    "jupyter>=1.1.1",
    "openai-whisper>=20240930",
    "ffmpeg>=1.4",
    "speechrecognition>=3.14.1",
    "kokoro>=0.7.13",
    "py-espeak-ng>=0.1.8",
    "pip>=25.0.1",
    "bert-score>=0.3.13",
    "anls>=0.0.2",
    "sentence-transformers>=4.1.0",
    "nltk>=3.9.1",
    "flashinfer-python>=0.2.5",
]
